Added link to header user info

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -93,6 +93,11 @@
   width: auto;
   max-width: 7.9375rem;
 
+  &__link {
+    text-decoration: none;
+    color: inherit;
+  }
+
   &__titles {
     display: flex;
     flex-direction: column;
