Added padding to dashboard table

--- a/client/src/components/DashboardMetrics/DashboardMetrics.scss
+++ b/client/src/components/DashboardMetrics/DashboardMetrics.scss
@@ -271,6 +271,7 @@ strong {
     width: auto;
     gap: 1rem;
     border-collapse: collapse;
+    padding: .5rem;
   
     &__head {
       color: $True-White;
